--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -59,7 +59,8 @@
 
     &__content {
         flex-grow: 1;
-        margin: 0 190px;
+        margin-left: 185px;
+        right: 50px;
 
         .create-post {
             .btn-outline-info {
