--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -8,13 +8,9 @@
     width: 100%;
 
     &__selected-chat {
-        display: flex;
-        gap: 25px;
-        flex-grow: 2;
+        width: 70%;
 
         .messages-container {
-            flex-grow: 2;
-
             .title {
                 display: flex;
                 flex-direction: row;
@@ -34,6 +30,8 @@
     }
 
     &__my-chats {
+        width: 30%;
+
         &_title {
             display: flex;
             align-items: center;
@@ -61,28 +59,19 @@
         }
 
         ul {
-            padding: 0;
+            width: 90%;
         }
 
         .group-chats, .personal-chats {
             display: none;
-            overflow: hidden;
 
-            &__active {
-                display: flex;
-
+            &_active {
                 .last-message {
-                    margin: 10px;
                     max-height: 20px;
-                    max-width: 140px;
-                    font-style: italic;
+                    max-width: 90%;
                     overflow: hidden;
                     word-wrap: break-word;
                     font-size: 12px;
-                }
-
-                .selected {
-                    border: 3px solid blue;
                 }
             }
         }
@@ -92,6 +81,8 @@
             margin: 5px;
             padding: 10px;
             box-shadow: 5px 5px gray;
+            overflow-x: hidden;
+            margin-left: 10px;
 
             .username {
                 font-weight: bold;
@@ -101,74 +92,6 @@
                 position: relative;
                 z-index: -1;
             }
-        }
-    }
-}
-
-.chat-messages, .group-chat-messages {
-    height: 500px;
-    margin: 12px 0px;
-    box-shadow: 3px 3px 3px 3px gray;
-    border-radius: 25px;
-    padding: 7px;
-    overflow-y: scroll;
-
-    li {
-        margin: 5px;
-
-        div {
-            padding: 5px 20px;
-        }
-    }
-
-    &__right {
-        flex-direction: row;
-        justify-content: right;
-        align-items: center;
-
-        .message {
-            border: 2px solid orange;
-            background: #f0f8ff;
-            min-width: 15%;
-        }
-
-        .edit-message {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-
-    &__left {
-        flex-direction: column;
-        align-items: start;
-
-        .message {
-            border: 2px solid gray;
-            min-width: 25%;
-        }
-    }
-
-    &__right, &__left {
-        display: flex;
-
-        svg {
-            margin: 0 10px;
-        }
-
-        :hover {
-            cursor: pointer;
-        }
-
-        .message {
-            border-radius: 25px;
-            text-align: center;
-            margin: 5px;
-            overflow-x: hidden;
-            word-wrap: break-word;
-            max-width: 75%;
-            text-align: left;
         }
     }
 }
