--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -1,23 +1,3 @@
-.message-menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-
-    svg {
-        margin: 5px 10px;
-        cursor: pointer;
-    }
-
-    &__handler {
-        color: black;
-
-        &_active {
-            color: orange;
-            transform: scale(1.2);
-        }
-    }
-}
-
 .chat-messages {
     display: flex;
     flex-direction: column;
@@ -34,27 +14,81 @@
 
         .message {
             padding: 5px 25px;
-            width: 95%;
+            width: 90%;
             word-wrap: break-word;
+            border-radius: 10px;
+            cursor: default;
+        }
+
+        .message:hover {
+            background: rgb(239, 243, 253);
+        }
+
+        .link:hover {
+            cursor: pointer;
+        }
+
+        .message-title {
+            display: flex;
+            flex-direction: row;
+            width: 90%;
+            justify-content: space-between;
+            align-items: center;
+
+            .message-menu {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                margin: 0 20px;
+
+                svg {
+                    margin: 5px 10px;
+                    cursor: pointer;
+                }
+
+                &__handler {
+                    color: black;
+
+                    &_active {
+                        color: orange;
+                        transform: scale(1.2);
+                    }
+                }
+            }
+
+            .username-container {
+                display: flex;
+                align-items: center;
+
+                &__username {
+                    margin: 5px 0;
+                    max-width: 150px;
+                    padding: 10px;
+                    border-radius: 10px;
+                    font-size: 12px;
+                    overflow-x: hidden;
+                    cursor: default;
+                    background: linear-gradient(blue, 1%, gray);
+                    color: white;
+                }
+
+                svg {
+                    margin: 0 10px;
+                }
+            }
         }
 
         .edit-message {
             display: flex;
-            flex-direction: row;
-            justify-content: center;
             align-items: center;
-        }
 
-        .username {
-            margin: 5px 0;
-            max-width: 150px;
-            padding: 10px;
-            border-radius: 10px;
-            font-size: 12px;
-            overflow-x: hidden;
-            cursor: default;
-            background: linear-gradient(blue, 1%, gray);
-            color: white;
+            input {
+                width: 90%;
+            }
+
+            svg {
+                margin: 0 15px;
+            }
         }
     }
 
