Update People section
In People section were added new actions:
 - invite to community: now users can send invite to community from People section;
- update request to connect: now users can see, if they already snet request to connect or people already frined

Fix issues for Community menu section.

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -58,9 +58,8 @@
     }
 
     &__content {
-        flex-grow: 1;
         margin-left: 185px;
-        right: 50px;
+        right: 20%;
 
         .create-post {
             .btn-outline-info {
