--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -3,9 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
     border-radius: 25px;
-    top: 19%;
+    top: 13%;
     width: 700px;
     height: 500px;
     padding: 10px;
@@ -61,6 +60,9 @@
 
     &__items {
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin: 5px;
 
         .form-group {
@@ -136,6 +138,18 @@
             }
         }
 
+        .alert-success, .alert-warning {
+            display: none;
+        }
+
+        .alert-success.active, .alert-warning.active {
+            display: flex;
+            justify-content: center;
+            font-size: 13px;
+            padding: 5px;
+            width: 250px;
+        }
+
         .actions {
             display: flex;
             justify-content: center;
@@ -167,5 +181,35 @@
         display: flex;
         justify-content: center;
         gap: 100px;
+    }
+}
+
+.remove-people, .leave-from-community {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 44%;
+    border: 2px solid gray;
+    border-radius: 25px;
+    background: white;
+    z-index: 5;
+
+    .friend {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .actions {
+        display: flex;
+        gap: 20px;
+        margin: 10px;
+    }
+
+    svg:hover {
+        cursor: pointer;
+        transform: scale(1.25);
     }
 }
