Add show short information abou user

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -1,7 +1,7 @@
 .communities {
     .invite-to-community {
-        width: 100%;
-        padding: 10px 50px;
+        width: 600px;
+        padding: 5px;
     }
 
     &__search {
