--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -149,17 +149,24 @@
                 display: flex;
 
                 &__username {
-                    margin: 5px;
-                    padding: 5px;
+                    display: flex;
+                    align-items: center;
                     border-radius: 5px;
                     align-items: center;
                     font-weight: bold;
-                }
+                    cursor: default;
 
-                &__username:hover {
-                    cursor: pointer;
-                    transform: scale(1.1);
-                    box-shadow: 2px 2px 2px 2px gray;
+                    svg {
+                        padding: 5px;
+                        border-radius: 25px;
+                    }
+
+                    svg:hover {
+                        cursor: pointer;
+                        transform: scale(1.1);
+                        background: green;
+                        color: white;
+                    }
                 }
 
                 svg {
@@ -169,6 +176,22 @@
                 svg:hover {
                     cursor: pointer;
                 }
+            }
+        }
+    }
+
+    .community-user-information {
+        position: fixed;
+        right: 40%;
+
+        .sent-request {
+            display: none;
+
+            &_active {
+                display: flex;
+                justify-content: center;
+                font-size: 13px;
+                padding: 5px;
             }
         }
     }
