--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/peopleInvitesToCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/peopleInvitesToCommunity.scss
@@ -1,16 +1,15 @@
-.invite-to-community {
-    position: fixed;
+.invites {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
-    padding: 10px;
+    gap: 10px;
+    padding: 5px;
     border: 2px solid green;
     border-radius: 10px;
     background: white;
     z-index: 10;
     top: 28%;
-    width: 250px;
+    margin: 10px 0;
 
     ul {
         padding: 0;
