Update user information

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
@@ -106,6 +106,16 @@
                         font-size: 12px;
                     }
                 }
+
+                .special-user {
+                    display: flex;
+                    align-items: center;
+                    gap: 25px;
+
+                    svg {
+                        cursor: pointer;
+                    }
+                }
             }
         }
 
