--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -5,12 +5,15 @@
     align-items: start;
     justify-content: start;
     gap: 15px;
-    width: 100%;
 
     &__selected-chat {
-        width: 70%;
+        display: flex;
+        gap: 20px;
+        width: 100%;
 
         .messages-container {
+            flex-grow: 2;
+
             .title {
                 display: flex;
                 flex-direction: row;
