--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -177,6 +177,16 @@
                     cursor: pointer;
                 }
             }
+
+            .special-user {
+                display: flex;
+                align-items: center;
+                gap: 25px;
+
+                svg {
+                    cursor: pointer;
+                }
+            }
         }
     }
 
