--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
@@ -1,39 +1,29 @@
 .friends {
-    &__empty {
-        opacity: 0.5;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
-    .tabs {
+    ul {
         display: flex;
         flex-direction: column;
-
-        &__nav {
-            display: flex;
-            justify-content: center;
-            margin: 5px 10px;
-        }
-
-        &__nav div {
-            padding: 10px;
-            width: 100px;
-            margin-left: 10px;
-            border: 3px solid gray;
-            border-radius: 10px;
-        }
-
-        &__nav div:hover {
-            cursor: pointer;
-        }
-
-        .active {
-            border: 3px solid blue;
-        }
+        gap: 15px;
     }
 
     .friend {
         display: flex;
         flex-direction: row;
         align-items: center;
+
+
+        .special-user {
+            display: flex;
+            align-items: center;
+            gap: 25px;
+
+            svg {
+                cursor: pointer;
+            }
+        }
 
         &__remove, &__details {
             margin: 0 15px;
