--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
@@ -8,7 +8,7 @@
         .card {
             width: 250px;
 
-            .special-user {
+            .special-user__another {
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
