--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
@@ -15,7 +15,7 @@
         align-items: center;
 
 
-        .special-user {
+        .special-user__another {
             display: flex;
             align-items: center;
             gap: 25px;
