--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
@@ -65,7 +65,7 @@
         flex-direction: row;
         justify-content: center;
         width: 100%;
-        margin: 10px;
+        margin: 10px 0;
         gap: 10px;
 
         .user-friend {
