Add chat message count
Now users can see how mane messages they didn't read in chats. Its will be indicate a number of unread message, special icon around message and will have special background

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -17,11 +17,18 @@
             align-items: center;
 
             .text-of-message {
-                padding: 5px 10px;
-                width: 90%;
-                word-wrap: break-word;
-                border-radius: 10px;
-                cursor: default;
+                &__unread, &__read {
+                    padding: 5px 10px;
+                    width: 90%;
+                    word-wrap: break-word;
+                    border-radius: 10px;
+                    cursor: default;
+                    padding: 3px;
+                }
+
+                &__unread {
+                    background: #E0F0E4;
+                }
             }
 
             .text-of-message:hover {
@@ -35,7 +42,7 @@
             .status {
                 margin-right: 5px;
                 cursor: default;
-                font-size: 12px;
+                font-size: 10px;
             }
         }
 
