--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
@@ -107,7 +107,7 @@
                     }
                 }
 
-                .special-user {
+                .special-user__another {
                     display: flex;
                     align-items: center;
                     gap: 25px;
