Remove extrernal Database table collumns

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -178,10 +178,10 @@
                 }
             }
 
-            .special-user {
+            .special-user__another {
                 display: flex;
                 align-items: center;
-                gap: 25px;
+                gap: 10px;
 
                 svg {
                     cursor: pointer;
