Add new features
Now users can:
 - update name of group chat;
 - update name of community;
 - update description of commuity.

Also, wass added alert: when user want to remove group or personal chat will be open popup to cinfirm your action

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -17,13 +17,18 @@
             .title {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: space-between;
                 align-items: center;
                 box-shadow: 3px 3px 3px 3px black;
                 border-radius: 10px;
-                padding: 10px;
-                gap: 25px;
+                padding: 10px 25px;
                 cursor: default;
+
+                &__content {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                }
 
                 .name {
                     margin: 0 20px;
