--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -4,7 +4,8 @@
     flex-direction: column;
     justify-content: space-around;
     border-radius: 25px;
-    top: 13%;
+    top: 15%;
+    left: 15%;
     width: 700px;
     height: 500px;
     padding: 10px;
