--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -1,7 +1,7 @@
 .selected-community {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: start;
+    gap: 20px;
 
     &__content {
         width: 100%;
@@ -13,24 +13,39 @@
 
             .title {
                 display: flex;
-                justify-content: start;
+                justify-content: space-between;
                 align-items: center;
+                width: 100%;
 
-                &__name {
-                    margin: 10px 25px;
-                    padding: 10px 20px;
-                    box-shadow: 3px 3px 3px 3px gray;
-                    border-radius: 20px;
-                }
+                &__content {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
 
-                &__name:hover {
-                    cursor: default;
-                    box-shadow: 3px 3px 3px 3px green;
-                }
+                    .name {
+                        display: flex;
+                        align-items: center;
+                        gap: 10px 20px;
+                        margin: 5px 10px;
+                        padding: 10px 20px;
+                        box-shadow: 3px 3px 3px 3px gray;
+                        border-radius: 20px;
+                        cursor: default;
 
-                &__policy {
-                    opacity: 0.6;
-                    cursor: default;
+                        svg:hover {
+                            cursor: default;
+                        }
+                    }
+
+                    &__name:hover {
+                        cursor: default;
+                        box-shadow: 3px 3px 3px 3px green;
+                    }
+
+                    &__policy {
+                        opacity: 0.6;
+                        cursor: default;
+                    }
                 }
 
                 svg:hover {
@@ -48,11 +63,19 @@
             display: flex;
             flex-direction: column;
 
-            &__title {
+            .title {
                 display: flex;
+                justify-content: start;
                 align-items: center;
-                margin: 10px 0;
+                margin: 15px 0;
+                gap: 25px;
                 cursor: default;
+
+                &__content {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                }
 
                 svg {
                     margin: 0 15px;
@@ -72,14 +95,18 @@
                 margin: 0 25px;
             }
         }
+
+        .edit {
+            &_active {
+                color: green;
+            }
+
+        }
     }
 
     &__actions {
-        position: fixed;
         display: flex;
         flex-direction: column;
-        right: 0px;
-        width: 275px;
         gap: 15px;
 
         .members {
