--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -174,6 +174,7 @@
 
             .member {
                 display: flex;
+                align-items: center;
 
                 &__username {
                     display: flex;
