Create Members component
Now all members for group chat or community will use general component: Members

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -149,6 +149,8 @@
             &__content {
                 display: flex;
                 flex-direction: column;
+                gap: 10px;
+                margin: 10px 0;
             }
 
             .add-people-to-community {
