--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
@@ -29,7 +29,7 @@
 .people-inspection__popup, .people-inspection__window {
     .title {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         width: 50%;
 
