--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -107,12 +107,7 @@
 .add-new-comment {
     display: flex;
     flex-direction: column;
-    align-items: end;
-
-    button {
-        width: 100px;
-        margin: 5px;
-    }
+    align-items: center;
 
     &__title {
         display: flex;
@@ -120,5 +115,11 @@
         justify-content: start;
         width: 100%;
         margin: 5px -15px;
+    }
+
+    &__content {
+        display: flex;
+        align-items: center;
+        gap: 20px;
     }
 }
